Java Slim Docker Image done